// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categoryReducer should return initialState 1`] = `
Object {
  "categories": Object {},
  "error": "",
  "headerCategories": Array [],
}
`;

exports[`categoryReducer should return the state for CATEGORIES_FAIL 1`] = `
Object {
  "error": Object {
    "abc": 123,
  },
}
`;

exports[`categoryReducer should return the state for CATEGORIES_SUCCESS 1`] = `
Object {
  "error": "",
  "headerCategories": Array [
    Object {},
    Object {
      "categoryid": 1234,
    },
    Object {
      "link": "1234",
    },
  ],
}
`;

exports[`categoryReducer should return the state for CATEGORY_SUCCESS 1`] = `
Object {
  "categories": Object {
    "1": Object {
      "featuredCategories": Array [
        Object {
          "link": "/foo/c/1234",
        },
        Object {},
        Object {
          "categoryid": 1234,
        },
        Object {
          "link": "/foo/c1234",
        },
        Object {
          "link": "1234",
        },
      ],
      "id": 1,
      "name": "name",
      "nonFeaturedCategories": Array [
        Object {
          "link": "/foo/c/1234",
        },
        Object {},
        Object {
          "categoryid": 1234,
        },
        Object {
          "link": "/foo/c1234",
        },
        Object {
          "link": "1234",
        },
      ],
    },
  },
  "error": "",
}
`;
